installation: correction téléchargement et ouverture de paquet